updated links for images

--- a/alligators.html
+++ b/alligators.html
@@ -20,7 +20,7 @@
 
         <h2>Rawr!🐊</h2><br>
         <!--image source for alligator and alt attriube for alternative text for an image added the height to make it fit-->
-        <img src="/images/alligator.jpeg" alt="A picture of a Alligator" title="A picture of a Alligator" height="250">
+        <img src="/github-zooanimals/images/alligator.jpeg" alt="A picture of a Alligator" title="A picture of a Alligator" height="250">
 
     
    <br><br>
