--- a/bear.html
+++ b/bear.html
@@ -19,7 +19,7 @@
 
         <h2>Rawr!🐻</h2><br>
         <!--image source for bear and alt attriube for alternative text for an image-->
-        <img id="bearImage" src="/images/bear.jpg" alt="A picture of a Bear" title="A picture of a Bear" height="200px">
+        <img id="bearImage" src="/github-zooanimals/images/bear.jpg" alt="A picture of a Bear" title="A picture of a Bear" height="200px">
 
     
    <br><br>
