--- a/giraffes.html
+++ b/giraffes.html
@@ -19,7 +19,7 @@
     <hr>
         <h2>Hiss! 🦒</h2><br>
         <!--image source for giraffe and alt attriube for alternative text for an image-->
-            <img id="bearImage" src="/images/giraffe.jpeg" alt="A picture of a Giraffe" title="A picture of a Giraffe" height="200px">
+            <img id="bearImage" src="/github-zooanimals/images/giraffe.jpeg" alt="A picture of a Giraffe" title="A picture of a Giraffe" height="200px">
 
     
    <br><br>
