--- a/monkeys.html
+++ b/monkeys.html
@@ -19,7 +19,7 @@
 
         <h2>Mmmm ummmm!🐒</h2><br>
         <!--image source for monkey and alt attriube for alternative text for an image-->
-        <img id="bearImage" src="/images/monkey.jpeg" alt="A picture of a Monkey" title="A picture of a Monkey" height="250">
+        <img id="bearImage" src="/github-zooanimals/images/monkey.jpeg" alt="A picture of a Monkey" title="A picture of a Monkey" height="250">
 
     
    <br><br>
