--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
 
-      <!--heading-->
+      <!--created a heading and hrefs to separete the animals-->
       <h1 class="zooAnimal">Welcome to Zoo Animals</h1>
       <a href="index.html" class="link">Home</a>
       <a href="bear.html" class="link">Bear</a>
