--- a/alligators.html
+++ b/alligators.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <!--created a heading and hrefs to separete the animals-->
     <h1 class="headerWelcome">Welcome to the Alligator page!</h1>
     <a href="index.html" class="link">Home</a>
-    
     <a href="bear.html" class="link">Bear</a>
     <a href="giraffes.html" class="link">Giraffes</a>
     <a href="lions.html" class="link">Lions</a>
