--- a/bear.html
+++ b/bear.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--a tags for the animals-->
+    <!--created a heading and hrefs to separete the animals-->
     <h1 class="headerWelcome">Welcome to the Bear page!</h1>
     <a href="index.html" class="link">Home</a>
     <a href="bear.html" class="link">Bear</a>
