--- a/monkeys.html
+++ b/monkeys.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+    <!--created a heading and hrefs to separete the animals-->
     <h1 class="headerWelcome">Welcome to the Monkey page!</h1>
     <a href="index.html" class="link">Home</a>
     <a href="bear.html" class="link">Bear</a>
