--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
       <hr />
     </header>
+    <!--added break line for the footer-->
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer>
