--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <!--added break line for the footer-->
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+    <!--added footer for author mailto and copyrigh-->
     <footer>
   
       <p >Author: David Cruz</p>
