--- a/alligators.html
+++ b/alligators.html
@@ -25,12 +25,12 @@
    <br><br>
 
    <p>Alligators</p>
-   
+   <!--ordered list-->
    <ol>
         <li>Mella</li>
         <li>Karl</li>        
     </ol>
-
+    <!--Facts about Alligator-->
     <p>Alligator Facts</p>
         <a id="wikiPage" href="https://en.wikipedia.org/wiki/Alligator" title="Goes to wikipedia page">For more information please click me!</a><br>
     
