--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <!--added break line for the footer-->
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <!--added footer for author mailto and copyrigh-->
+    <!--added footer for author mailto and copyright-->
     <footer>
   
       <p >Author: David Cruz</p>
