--- a/lions.html
+++ b/lions.html
@@ -32,11 +32,10 @@
     </ol>
     
 
-    <div class="wikiPage">
+    <!--Facts about Lion-->
         <p>Lion Facts</p> 
         <a href="https://en.wikipedia.org/wiki/Lion" title="Goes to wikipedia page">For more information please click me!</a><br>
 
-    </div>
 
         <footer>
   
