--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <footer>
   
       <p >Author: David Cruz</p>
-      <a href="mailto:davidcrz@example.com">davidcruz@fullstackacademy.com</a>
+      <a href="mailto:davidcrz@example.com">davidcruz@fullstackacademy.com</a><br><br>
       &copy;2024 Copyright Reserved <br />
     </footer>
 
