--- a/lions.html
+++ b/lions.html
@@ -19,7 +19,7 @@
     <hr>
         <h2>Rawr!🦁</h2><br>
         <!--image source for lion and alt attriube for alternative text for an image-->
-            <img src="/images/lion.jpeg" alt="A picture of a Lion" title="A picture of a Lion" height="250">
+            <img src="images/bear.jpg" alt="A picture of a Lion" title="A picture of a Lion" height="250">
 
     
    <br><br>
