--- a/monkeys.html
+++ b/monkeys.html
@@ -20,7 +20,7 @@
 
         <h2>Mmmm ummmm!🐒</h2><br>
         <!--image source for monkey and alt attriube for alternative text for an image-->
-        <img src="/images/monkey.jpeg" alt="A picture of a Monkey" title="A picture of a Monkey" height="250">
+        <img src="images/monkey.jpeg" alt="A picture of a Monkey" title="A picture of a Monkey" height="250">
 
     
    <br><br>
